MAINT: update lock files (#43)
* MAINT: update kernel Python versions
* MAINT: remove dynamic version from `uv.lock`
* MAINT: update developer configuration

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
       - id: check-useless-excludes
 
   - repo: https://github.com/ComPWA/policy
-    rev: 0.5.15
+    rev: 0.6.1
     hooks:
       - id: check-dev-files
         args:
@@ -24,6 +24,7 @@ repos:
           - --repo-title="ComPWA demos"
       - id: colab-toc-visible
       - id: remove-empty-tags
+      - id: set-nb-display-name
 
   - repo: https://github.com/kynan/nbstripout
     rev: 0.8.1
@@ -54,7 +55,7 @@ repos:
             metadata.vscode
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.9.1
+    rev: v0.9.3
     hooks:
       - id: ruff
         args: [--fix]
@@ -97,18 +98,18 @@ repos:
           - --in-place
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v8.17.0
+    rev: v8.17.1
     hooks:
       - id: cspell
 
   - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
-    rev: 3.0.3
+    rev: 3.2.0
     hooks:
       - id: editorconfig-checker
         name: editorconfig
         alias: ec
 
   - repo: https://github.com/astral-sh/uv-pre-commit
-    rev: 0.5.18
+    rev: 0.5.25
     hooks:
       - id: uv-lock
