MAINT: reduce diff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,10 @@ jupyter = [
     {include-group = "notebooks"},
 ]
 notebooks = ["pyproject-local-kernel"]
-test = ["nbmake", {include-group = "notebooks"}]
+test = [
+    "nbmake",
+    {include-group = "notebooks"},
+]
 
 [tool.poe]
 executor.type = "uv"
@@ -40,7 +43,11 @@ cmd = "pre-commit run --all-files"
 help = "Perform all linting, formatting, and spelling checks"
 
 [tool.pytest.ini_options]
-addopts = ["--color=yes", "--durations=0", "--nbmake"]
+addopts = [
+    "--color=yes",
+    "--durations=0",
+    "--nbmake",
+]
 filterwarnings = [
     "ignore:Passing a schema to Validator.iter_errors is deprecated.*:DeprecationWarning",
 ]
