--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,7 @@
 [project]
-dependencies = ["ipywidgets"]
+dependencies = [
+    "ipywidgets",
+]
 name = "compwa-demo"
 requires-python = "~=3.13.0"
 version = "0.0.0"
