--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Update
+name: CI
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -6,17 +6,20 @@ concurrency:
     ${{ github.ref != format('refs/heads/{0}', github.event.repository.default_branch) }}
 
 on:
+  push:
+    branches:
+      - main
+      - epic/*
+      - "[0-9]+.[0-9]+.x"
   pull_request:
     branches:
       - main
       - epic/*
-    paths:
-      - .pre-commit-config.yaml
-      - uv.lock
+      - "[0-9]+.[0-9]+.x"
   workflow_dispatch:
 
 jobs:
-  lock:
-    uses: ComPWA/actions/.github/workflows/lock.yml@v4
+  style:
     secrets:
       token: ${{ secrets.PAT }}
+    uses: ComPWA/actions/.github/workflows/pre-commit.yml@v4.0
