--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -19,6 +19,7 @@
     "yzhang.markdown-all-in-one"
   ],
   "unwantedRecommendations": [
+    "astral-sh.ty",
     "bungcip.better-toml",
     "davidanson.vscode-markdownlint",
     "garaioag.garaio-vscode-unwanted-recommendations",
@@ -27,6 +28,7 @@
     "ms-python.isort",
     "ms-python.mypy-type-checker",
     "ms-python.pylint",
+    "ms-python.vscode-pylance",
     "ms-toolsai.vscode-jupyter-slideshow",
     "travisillig.vscode-json-stable-stringify",
     "tyriar.sort-lines"
