MAINT: ugprade lock files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ executor = {group = "jupyter"}
 help = "Launch Jupyter Lab"
 
 [tool.poe.tasks.nb]
-args = [{name = "paths", default = "docs", multiple = true, positional = true}]
+args = [{name = "paths", default = "", multiple = true, positional = true}]
 cmd = "pytest --nbmake --nbmake-timeout=0 ${paths}"
 executor = {group = "notebooks", with = "nbmake"}
 help = "Run all notebooks"
