Revert "FIX: run with `notebooks` group"
This reverts commit c9588df6fd687b2cf21ace85f81683c80e2c9ae1.

--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -27,4 +27,4 @@ jobs:
       - uses: astral-sh/setup-uv@v7
       - name: Install graphviz
         run: sudo apt-get -y install graphviz
-      - run: uv run --group notebooks --no-dev --with poethepoet poe nb
+      - run: uvx --from poethepoet poe nb
