MAINT: upgrade lock files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
       - id: check-useless-excludes
 
   - repo: https://github.com/ComPWA/policy
-    rev: 0.8.2rc14
+    rev: 0.8.2rc15
     hooks:
       - id: check-dev-files
         args:
@@ -23,6 +23,7 @@ repos:
       - id: colab-toc-visible
       - id: remove-empty-tags
       - id: set-nb-display-name
+      - id: strip-nb-whitespace
 
   - repo: https://github.com/kynan/nbstripout
     rev: 0.9.0
@@ -53,7 +54,7 @@ repos:
             metadata.vscode
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.14.14
+    rev: v0.15.0
     hooks:
       - id: ruff-check
         args: [--fix]
@@ -108,6 +109,6 @@ repos:
         alias: ec
 
   - repo: https://github.com/astral-sh/uv-pre-commit
-    rev: 0.9.28
+    rev: 0.9.29
     hooks:
       - id: uv-lock
